src/components/EditHistory/EditHistory.css
html {
    scroll-behavior: smooth;
}

/* .ant-list-item-action, .edit-history-list-meta {
    margin: 0 !important;
} */

.edit-history-list .ant-list-item {
    padding-top: 8px !important;
    padding-bottom: 8px !important;
}

.edit-history-list-img {
    width: 64px;
    height: 64px;
    border-radius: 50%;
    margin-top: 0.9rem;
    border: 1px solid #f0f0f0;
    text-align: center;
    align-items: center;
    display: flex;
    justify-content: center;
}

.edit-history-list-img p {
    margin-top: 1.25rem;
    font-size: 1.25rem;
}

.ant-list-item-meta-title {
    font-weight: 500;
}

.edit-history-list-img svg {
    font-size: 1.25rem;
}

.edit-history-list-display {
    margin-bottom: 0 !important;
}

@media screen and (max-width: 420px) {
    .edit-history-list-img {
        margin-top: 1.45rem;
    }

    .edit-history-list-actions {
        /* display: block; */
        margin-left: 5rem;
    }

    .edit-history-list-action-divider {
        display: none;
    }
}

